Issue #10570: curses.tigetstr() is now expecting a byte string, instead of a Unicode string.

This is an incompatible change, but the previous behaviour was completly wrong.